[gd_scene load_steps=9 format=3 uid="uid://rj0ngrcnhc6p"]

[ext_resource type="Script" path="res://spike2.gd" id="1_qomt8"]
[ext_resource type="AudioStream" uid="uid://b6t6s702fb5mp" path="res://sounds/sound8.wav" id="2_fqhux"]
[ext_resource type="Script" path="res://Light_sounds.gd" id="3_dsh1f"]
[ext_resource type="AudioStream" uid="uid://b4a4gbw1ns6d2" path="res://sounds/sound9.wav" id="4_l0ei8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1ss5i"]
transparency = 1
albedo_color = Color(1, 0, 0, 0.490196)

[sub_resource type="SphereMesh" id="SphereMesh_bl8r6"]
radius = 0.4
height = 0.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fjsrh"]
radius = 0.3
height = 0.6

[sub_resource type="TorusMesh" id="TorusMesh_xe103"]
inner_radius = 1.014

[node name="spike2" type="Area3D"]
transform = Transform3D(-1.3027e-15, 4.37114e-08, -1, 1, 2.98023e-08, 0, 2.98023e-08, -1, -4.37114e-08, 0, 0, 0)
script = ExtResource("1_qomt8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 2.98023e-08, -2.98023e-08, 2.98023e-08, 3.0598e-07, 1, 2.98023e-08, -1, 3.0598e-07, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_1ss5i")
mesh = SubResource("SphereMesh_bl8r6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.26901e-17, -3.11017e-09, 0.0711523)
shape = SubResource("CapsuleShape3D_fjsrh")

[node name="hit" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 1.05879e-22, 0, 1, 0, 0, 0, 1, 0.468132, 0.156918, 0.00676858)
stream = ExtResource("2_fqhux")
volume_db = 10.0
max_db = 6.0
doppler_tracking = 2
script = ExtResource("3_dsh1f")

[node name="sound_light" type="OmniLight3D" parent="hit"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0348836, -0.0037058)
light_color = Color(0.418238, 0.601976, 1, 1)
light_energy = 15.03
light_size = 1.0
omni_range = 4096.0

[node name="fly" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 1.05879e-22, 0, 1, 0, 0, 0, 1, 0.469836, 0.156918, 0.00676858)
stream = ExtResource("4_l0ei8")
volume_db = 10.0
max_db = 6.0
autoplay = true
doppler_tracking = 2
script = ExtResource("3_dsh1f")

[node name="sound_light" type="OmniLight3D" parent="fly"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0348836, -0.0037058)
light_color = Color(1, 0, 0, 1)
light_energy = 15.03
light_size = 1.0
omni_range = 4096.0

[node name="ring_x" type="MeshInstance3D" parent="."]
transform = Transform3D(0.00150219, -0.999999, 8.954e-05, 0.999999, 0.00150223, 0.000507738, -0.000507872, 8.87772e-05, 1, 0, 0, 0)
mesh = SubResource("TorusMesh_xe103")

[node name="ring_z" type="MeshInstance3D" parent="."]
transform = Transform3D(0.00120175, -0.799999, 7.1632e-05, 0.799999, 0.00120178, 0.000406191, -0.000406298, 7.10218e-05, 0.8, 0, 0, 0)
mesh = SubResource("TorusMesh_xe103")

[node name="ring_y" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.7, 6.11959e-08, 0, -6.11959e-08, -0.7, 0, 0, 0, 0.7, 0, 0, 0)
mesh = SubResource("TorusMesh_xe103")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
